swagger cart and product. add readme
