# assessment/routes/product.go
@@ -11,7 +11,7 @@ func ProductRoutes(e *echo.Echo, productHandler *handler.ProductHandler) {
 	e.GET("/products", productHandler.GetAllProduct)
 	e.PUT("/products/:id", productHandler.UpdateProduct)
 	e.DELETE("/products/:id", productHandler.DeleteProduct)
-	e.GET("/products/:id", productHandler.GetProductByID)
+	e.GET("/product/:id", productHandler.GetProductByID)
 	e.GET("/products/:category", productHandler.GetProductByCategory)
 	e.GET("/products/:priceMin/:priceMax", productHandler.GetProductByPrice)
 	// r := e.Group("/restricted")
